--- a/profil.html
+++ b/profil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kantor Notaris</title>
+    <title>NOTARIS & PPAT Agus Priyantoko, SH., MKn., MH.</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="profil-style.css">
@@ -17,13 +17,27 @@
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/59443b8a75.js" crossorigin="anonymous"></script>
+      <!-- Custom styles for this template -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body>
-    <!-- Icon -->
+<body id="content-page">
   <div class="container-fluid fixed-bottom container-icon">
-    <a href="#" class="icon float-end">
-      <i class="fa-solid fa-circle-up m-3"></i>
-    </a>
+    <div class="col-icon float-end">
+      <a href="" class="icon up" data-aos="fade-left"
+      data-aos-easing="linear"
+      data-aos-duration="1000">
+        <svg  xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
+          <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+        </svg>
+      </a>
+        <a href="#content-page" class="icon" data-aos="fade-left"
+        data-aos-easing="linear"
+        data-aos-duration="1000">
+        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+          <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+        </svg>
+        </a>
+    </div>
   </div>
     <!-- End Icon -->
 
@@ -34,7 +48,9 @@
           <i class="fa fa-bars" id="button"></i>
           <i class="fa fa-times"id="close"></i>
       </label>
-      <h5>NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</h5>
+      <a href="index.html">
+        <h5>NOTARIS & PPAT <br> Agus Priyantoko, SH., MKn., MH.</h5>
+      </a>
       <ul class="list-unstyled">
         <li><a href="index.html">Home</a></li>
         <li><a href="tentang-kami.html">Tentang Kami</a></li>
@@ -49,7 +65,7 @@
     <div class="container p-4">
       <div class="col">
         <ol class="breadcrumb ms-auto mt-1">
-            <li class="breadcrumb-item"><a href="#"><i class="fa-solid fa-house"></i></a></li>
+            <li class="breadcrumb-item"><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
             <li class="breadcrumb-item active" aria-current="page">PROFIL NOTARIS & PPAT</li>
         </ol>
        </div>
